# fast-file-backup

./: .gitignore  README.md  fast-file-backup-ingest.py  pyproject.toml  requirements.txt
src/fast_file_backup/: copy.py  ingest.py  query.py  remove.py
